Edits to update

--- a/css/junlam.css
+++ b/css/junlam.css
@@ -1,7 +1,7 @@
 .jltogether {
     background: #fff url(../images/Logo-together-capital.png) no-repeat center center;}
 .jldeveloper {
-    background: #fff url(../images/developer_w.jpg) no-repeat center center;}
+    background: #fff url(../images/MPP-Bricks-logo.jpg) no-repeat center center;}
 .jlroles {
     background: #fff url(../images/roles_jun.png) no-repeat center center;}
 .junlam {
