--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ figure {
   background: #fff url(../images/loader.gif) no-repeat center center;
   width: 100%;
   float: left;
-  margin-bottom: 10em;
+  margin-bottom: 0.2em;
   clear: both; }
   #colorlib-hero .flexslider {
     border: none;
@@ -283,7 +283,7 @@ figure {
       z-index: 9; }
       #colorlib-hero .flexslider .slider-text > .slider-text-inner {
         display: table-cell;
-        vertical-align: middle;
+        /* vertical-align: middle; */
         min-height: 700px;
         padding: 2.5em;
         position: relative; }
@@ -380,8 +380,8 @@ body.offcanvas {
 .colorlib-about,
 .colorlib-services,
 .colorlib-contact {
-  padding-top: 4em;
-  padding-bottom: 9em;
+  padding-top: 1em;
+  /* padding-bottom: 9em; */
   clear: both;
   width: 100%;
   display: block; }
@@ -405,7 +405,7 @@ body.offcanvas {
 
 .colorlib-heading {
   font-size: 18px;
-  margin-bottom: 4em;
+  margin-bottom: 0.2em;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 5px;
@@ -631,7 +631,10 @@ body.offcanvas {
   .services h3 {
     font-family: "Quicksand", Arial, sans-serif;
     font-size: 15px;
-    font-weight: 500; }
+    font-weight: 500;
+    margin-top: 140px;
+    text-align: center;
+  }
   .services.color-2 {
     border-bottom: 2px solid #ec5453; }
     .services.color-2 .icon2 i {
@@ -650,7 +653,7 @@ body.offcanvas {
     border-bottom: 2px solid #4054b2; }
 
 .services {
-  margin-bottom: 80px;
+  /* margin-bottom: 80px; */
   position: relative;
   z-index: 0; }
   @media screen and (max-width: 768px) {
